src/unit/snapshots/grab__test_zellij__render_default_state.snap
---
source: src/test_zellij.rs
expression: frame.to_trimmed_string()
---
 Current Folder: /test/project (Ctrl f to change)
 _

 No Panes or Files



















 Hint: start your search with 'struct', 'fn' or 'enum' to look for rust assets
